# integration_cobot_tb4

./: .gitignore  README.md  tools_mycobot_joint_udp_exporter.py
config/: anchor.yaml  b002_scene.yaml  turtle_cobot_3d.rviz
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
launch/: env3d.launch.py  host_overlay.launch.py
ros2_ws/src/: mycobot_description
ros2_ws/src/cobot_tb4_overlay/: package.xml  setup.cfg  setup.py
ros2_ws/src/cobot_tb4_overlay/cobot_tb4_overlay/: static_cobot_joint_state_publisher.py  table_marker_node.py  udp_joint_state_importer.py
ros2_ws/src/cobot_tb4_overlay/launch/: integrated_scene.launch.py
scripts/: generate_3d_assets.py  install_overlay_into_tb4_container.sh  launch_overlay_in_tb4_container.sh  render_scene_2d_overview.py  run_3d_view.sh  run_host_overlay.sh  run_overlay_container.sh  start_mycobot_joint_exporter.sh
tools/: tools_mycobot_joint_udp_receiver.py  tools_urdf_marker_publisher.py
