<?xml version="1.0"?>
<package format="3">
  <name>cobot_tb4_overlay</name>
  <version>0.1.0</version>
  <description>Visualization overlay for anchoring MyCobot in the TurtleBot4 map.</description>
  <maintainer email="mhc@todo.todo">mhc</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
